Added message 1003 and 1004 and various fixes

--- a/RTCM/RTCM.csproj
+++ b/RTCM/RTCM.csproj
@@ -44,12 +44,14 @@
     <Compile Include="CRC24Q.cs" />
     <Compile Include="HeaderUtil.cs" />
     <Compile Include="MESSAGES\1001.cs" />
+    <Compile Include="MESSAGES\1003.cs" />
+    <Compile Include="MESSAGES\1004.cs" />
     <Compile Include="MESSAGES\1006.cs" />
     <Compile Include="MESSAGES\1005.cs" />
     <Compile Include="MESSAGES\1002.cs" />
     <Compile Include="MESSAGES\GpsRtkBase.cs" />
     <Compile Include="MESSAGES\ISendMessage.cs" />
-    <Compile Include="MESSAGES\MessageEnum.cs" />
+    <Compile Include="MESSAGES\Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
